<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity: 0</string>
    <string name="price">Price</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="name">Name of the Product</string>
    <string name="order">Order Product</string>
    <string name="delete">Delete Product</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="delete_sll">All products deleted from DB</string>
    <string name="warning">Warning!</string>
    <string name="delete_sll_confirm">"Do you want to delete all data from the DB?"</string>
    <string name="save">Save Changes</string>
    <string name="Fab1">Add New Product</string>
    <string name="Fab2">Add Dummy Data</string>
    <string name="Fab3">Delete All</string>
    <string name="empty">No Items in Inventory. Click the button at lower right corner, to add a new product, or add dummy data.</string>
    <string name="denied">Permission Denied</string>
    <string name="load_failed">Image load failed</string>
    <string name="discard_info">There are unsaved changes. Do you want to discard?</string>
    <string name="discard_positive">Discard</string>
    <string name="discard_negative">Stay</string>
    <string name="delete_info">Are you sure you want to delete this product?</string>
    <string name="delete_positive">Delete</string>
    <string name="delete_negative">Cancel</string>
    <string name="image_missing">Please add an image for the product</string>
    <string name="no_email_app">No email app found to make the order</string>
    <string name="info_needed">There are some more info needed. Please fill every value.</string>
    <string name="save_success">Product Item successfully added</string>
    <string name="save_fail">Failed to add a new Product Item</string>
    <string name="update_success">Product Item successfully Updated</string>
    <string name="update_fail">Failed to Update Product Item</string>
    <string name="delete_success">Product Item successfully Deleted</string>
    <string name="delete_fail">Failed to Delete Product Item</string>
    <string name="photo_needed">Please add a photo of the product</string>
    <string name="quantity_reduced">Product quantity reduced.</string>
    <string name="quantity_zero">The quantity of the product is already zero.</string>


</resources>
